fix: tweak vertical rhyrhm spacing

--- a/style.css
+++ b/style.css
@@ -579,7 +579,7 @@ details > summary {
 }
 
 aside {
-  padding: 1rem;
+  padding: .5rem 1rem;
   margin: 0.5rem auto;
   color: var(--bg);
   background-color: var(--accent);
@@ -589,6 +589,10 @@ aside {
 aside > a:hover {
   color: inherit;
   text-decoration: none !important;
+}
+
+h1 + small {
+  margin-top: -.625em;
 }
 
 .archive {
